tests/baselines/reference/classCannotExtendVar.errors.txt
==== tests/cases/compiler/classCannotExtendVar.ts (1 errors) ====
    var Markup;
    
    class Markup {
          ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    